2002-05-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DASSL.h (DASSL_options::init): Undo previous change.
	(DASSL_options::set_absolute_tolerance): Likewise.
	* LSODE.h (LSODE_options::init): Likewise.
	(LSODE_options::set_absolute_tolerance): Likewise.

	* DASPK.h (DASPK_options::init): Use default absolute tolerance of
	sqrt(eps), not eps^2.
	DASPK_options::set_absolute_tolerance): Likewise.

2002-05-17  Mumit Khan <khan@nanotech.wisc.edu>

	* Array.h (Array<T>::resize_fill_value): Return default initialized
	object.

2002-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-rl-edit.c (OCTAVE_RL_SAVE_STRING): New macro.
	(octave_rl_set_name, octave_rl_set_basic_quote_characters): Use it.
	(octave_rl_set_basic_word_break_characters,
	octave_rl_set_completer_word_break_characters): New functions.
	* oct-rl-edit.h: Provide decls.
	* cmd-edit.cc (gnu_readline::do_set_basic_word_break_characters,
	gnu_readline::do_set_completer_word_break_characters): New functions.
	(command_editor::set_basic_quote_characters,
	command_editor::set_completion_append_character): New static functions.
	* cmd-edit.h: Provide decls.
	(command_editor::do_set_basic_word_break_characters,
	command_editor::do_set_completer_word_break_characters):
	New virtual functions.

	* CMatrix.h, boolMatrix.h, chMatrix.h, dMatrix.h
	(resize_fill_value): New static function.

	* Array-idx.h (Array<T>::index): New args, resize_ok and
	resize_fill_value.
	* Array2-idx.h (Array2<T>::index): Likewise.
	* ArrayN-idx.h (ArrayN<T>::index): Likewise.

	* Array2.cc (Array<T>::print_info): New function.
	* Array2.h: Provide decl.

	* Array.cc (Array<T>::print_info): New function.
	* Array.h: Provide decl.

2002-05-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* idx-vector.h (idx_vector::idx_vector (int)): New function.
	(idx_vector_rep::idx_vector_rep (int)): New decl.
	* idx-vector.cc (idx_vector_rep::idx_vector_rep (int)): New function.

	* Array.h (Array<T>::resize_fill_value (void)): New static function.